# vc-benchmark-painting

./: CMakeLists.txt  KoStreamedMath.h  main.cpp
